--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.22.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "viem": "^2.17.5"
   }
 }
