--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +12,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "dotenv": "^16.4.5",
-    "hardhat": "^2.22.3"
+    "hardhat": "^2.3.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "prb-math": "^2.4.3",
     "viem": "^2.17.5"
   }
 }
